# deepagents

libs/deepagents-code-cli/: .env.example  README.md  pyproject.toml
libs/deepagents-code-cli/deepagents_code_cli/: agent_memory.py  config.py  main.py
libs/deepagents-code-cli/deepagents_code_cli/knowledge/: private_net_lib.md
libs/deepagents-code-cli/deepagents_code_cli/skills/: implement_adapter.md  implement_feature.md  load.py  middleware.py
libs/deepagents-code-cli/deepagents_code_cli/skills/implement-adapter/: SKILL.md  adapter_helper.py
libs/deepagents-code-cli/deepagents_code_cli/skills/use-private-libraries/: SKILL.md
libs/deepagents-code-cli/example_codebase/: private_net_lib.py
libs/deepagents-code-cli/reference_codebase/: legacy.py
